Add link to thesis in readme, minor text edits

--- a/notebooks/06-demo-analysis.ipynb
+++ b/notebooks/06-demo-analysis.ipynb
@@ -41,13 +41,14 @@
     "args = Namespace()\n",
     "args.seed = 42\n",
     "args.recording_path = 'user_data/dem0_demo-60.0_000.sdg'\n",
-    "args.focus_path = None\n",
     "args.logging_path = None\n",
     "args.logging_level = 10\n",
     "args.show_fps = False\n",
     "args.volume = 1.\n",
     "args.render_scale = 3\n",
-    "args.time_scale = 1."
+    "args.time_scale = 1.\n",
+    "args.focus_path = None\n",
+    "args.focus_record = False"
    ]
   },
   {
